--- a/public/src/index.html
+++ b/public/src/index.html
@@ -36,13 +36,13 @@
   <link rel="stylesheet" href="./stylesheets/main.min.css?v=1.0.0" type="text/css">
   <!-- Stylesheets end. -->
   <!-- Google Analytics start. -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158823595-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7R7W0LRLJ1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-158823595-1');
+    gtag('config', 'G-7R7W0LRLJ1');
   </script>
   <!-- Google Analytics end. -->
   <!-- Schema start. -->
@@ -64,17 +64,17 @@
 <body class="page theme theme--light">
 
   <header class="header">
-    <section class="header__layout container">
-      <article class="header__item header__item--left">
+    <div class="header__layout container">
+      <div class="header__item header__item--left">
         <a href="#top" class="logo header__link"><span class="logo__text logo__text--dark">Louis</span> <span
             class="logo__text logo__text--light">Young</span></a>
-      </article>
+      </div>
 
-      <article class="header__item header__item--toggle">
+      <div class="header__item header__item--toggle">
         <button class="toggle">
           <span class="toggle__line"></span>
         </button>
-      </article>
+      </div>
 
       <nav class="navigation">
         <ul class="navigation__list">
@@ -88,71 +88,72 @@
         <a href="#contact" class="header__button header__button--small header__link button">Contact</a>
       </nav>
 
-      <article class="header__item header__item--right">
+      <div class="header__item header__item--right">
         <a href="#contact" class="header__button header__button--large button">Contact</a>
-      </article>
-    </section>
+      </div>
+    </div>
   </header>
 
-  <section class="underlay"></section>
+  <div class="underlay"></div>
 
   <main class="background">
-    <section class="introduction page__section">
-      <article class="introduction__layout container" data-aos="fade-up" data-aos-duration="2000">
+    <section class="introduction container" data-aos="fade-up" data-aos-duration="2000">
+      <article class="introduction__content">
+        <h1 class="introduction__title">Web Developer</h1>
 
-        <article class="introduction__content">
-          <h1 class="introduction__title">Web Developer</h1>
-
-          <p class="introduction__content">Currently creating fast, responsive, accessible and secure
-            websites and
-            applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer"
-              class="link">Fluid
-              Studios</a> to help benefit businesses.
-          </p>
-          <a href="#work" class="button">See my Work</a>
-        </article>
-
-        <img src="./assets/images/illustrations/full-stack-web-developer.svg" alt="Full Stack Web Developer"
-          title="Full Stack Web Developer" class="introduction__illustration">
+        <p class="introduction__content">Currently creating fast, responsive, accessible and secure
+          websites and
+          applications at <a href="//fluidstudiosltd.com" target="_blank" rel="noopener nofollow noreferrer"
+            class="link">Fluid
+            Studios</a> to help benefit businesses.
+        </p>
+        <a href="#work" class="button">View my Work</a>
       </article>
+
+      <img src="./assets/images/illustrations/full-stack-web-developer.svg" alt="Full Stack Web Developer"
+        title="Full Stack Web Developer" class="introduction__illustration">
+
     </section>
 
     <hr class="anchor" id="skills">
 
     <hr class="separator">
 
-    <section class="skills section page__section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
+    <section class="skills section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
       <article class="skills__inner container">
         <h2 class="skills__title">Expertise</h2>
 
-        <article class="skills__layout">
+        <div class="skills__layout">
           <article class="skill">
             <h3 class="skill__title">Development</h3>
-            <p class="skill__text">With industry experience under my belt, I'm well practiced in developing fast,
+            <p class="skill__text">With years of industry experience under my belt, I'm well versed in developing
+              fast,
               responsive, secure
-              and successful websites.
+              and successful websites using a multitude of technologies and tools.
             </p>
           </article>
 
           <article class="skill">
             <h3 class="skill__title">User Interface</h3>
-            <p class="skill__text">Having worked with many designers, I can communicate constructive feedback and ensure
-              the best product for the client.</p>
+            <p class="skill__text">Having worked with different teams and designers, I can communicate constructive
+              feedback
+              and ensure optimal end results for clients.</p>
           </article>
 
           <article class="skill">
             <h3 class="skill__title">User Experience</h3>
             <p class="skill__text">Having worked on and built a plethora of websites, I know what works and what doesn't
-              for users, and in turn businesses.</p>
+              for users, and therefore businesses and can spot issues in advance.</p>
           </article>
 
           <article class="skill">
             <h3 class="skill__title">Search Engine Optimisation</h3>
-            <p class="skill__text">With great understanding of technical on-page SEO, I can ensure a website ranks well
-              and works well for businesses.</p>
+            <p class="skill__text">With great understanding of technical on-page SEO, I have the tools and knowledge to
+              enable a website to rank well
+              and generate the business that it should.</p>
           </article>
 
-        </article>
+        </div>
       </article>
     </section>
 
@@ -160,38 +161,37 @@
 
     <hr class="separator">
 
-    <section class="projects section container page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="500">
+    <section class="projects section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
 
       <figure class="project">
         <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg" alt="Word Counter"
-            title="Word Counter" class="project__preview">
+          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Word Counter" title="Word Counter"
+            class="project__preview">
         </a>
       </figure>
 
       <figure class="project">
         <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
-            alt="Web Development Project" title="Web Development Project" class="project__preview">
+          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Web Development Project"
+            title="Web Development Project" class="project__preview">
         </a>
       </figure>
 
       <figure class="project">
         <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
-            alt="Web Development Project" title="Web Development Project" class="project__preview">
+          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Web Development Project"
+            title="Web Development Project" class="project__preview">
         </a>
       </figure>
 
       <figure class="project">
         <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" size="600x430" src="./assets/images/projects/word-counter.jpg"
-            alt="Web Development Project" title="Web Development Project" class="project__preview">
+          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Web Development Project"
+            title="Web Development Project" class="project__preview">
         </a>
       </figure>
     </section>
@@ -200,12 +200,11 @@
 
     <hr class="separator">
 
-    <section class="content section container page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="250">
+    <section class="content section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="250">
 
       <figure>
         <img src="./assets/images/illustrations/website-developer-experience.svg" alt="Web Development and Design"
-          title="Web Development and Design" class="content__image" loading="lazy" size="275x215">
+          title="Web Development and Design" class="content__image" loading="lazy">
       </figure>
 
       <article class="content__content">
@@ -214,7 +213,10 @@
         <p class="content__text">I specialise in creating performant, responsive, secure and accessible websites and
           applications. </p>
 
-        <p class="content__text">Technologies I'm comfortable working with include but are not limited to</p>
+        <p class="content__text">I am a fast and keen learner and can take new technologies and methodologies on
+          board quickly and efficiently.</p>
+
+        <p class="content__text">Technologies I'm comfortable working with include but are not limited to:</p>
         <ul class="pills">
           <li class="pill">HTML5</li>
           <li class="pill">CSS3</li>
@@ -245,7 +247,7 @@
 
       <figure class="content__illustration">
         <img src="./assets/images/illustrations/web-design-development.svg" alt="Website Developer Experience"
-          title="Website Developer Experience" class="content__image" loading="lazy" size="275x215">
+          title="Website Developer Experience" class="content__image" loading="lazy">
       </figure>
 
       <article class="content__content">
@@ -254,7 +256,7 @@
         <p class="content__text">I have experience working as an industry professional and I am an excellent
           communicator
           having worked in both small and large teams
-          with knowledge of </p>
+          with knowledge of:</p>
         <ul class="pills">
           <li class="pill">Windows</li>
           <li class="pill">Linux</li>
@@ -280,7 +282,7 @@
 
         <p class="content__text">and more.</p>
 
-        <p class="content__text">I am also practiced in using industry leading applications such as</p>
+        <p class="content__text">I am also practiced in using industry leading applications such as:</p>
         <ul class="pills">
           <li class="pill">Visual Studio Code</li>
           <li class="pill">Slack</li>
@@ -296,8 +298,7 @@
 
     <hr class="separator">
 
-    <section class="contact container section page__section" data-aos="fade-up" data-aos-duration="2000"
-      data-aos-delay="500">
+    <section class="contact container section" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
       <article>
         <h2 class="contact__title">Let's talk</h2>
 
@@ -324,39 +325,39 @@
   </main>
 
   <footer class="footer">
-    <section class="footer__layout container">
+    <div class="footer__layout container">
       <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
           class="logo__text logo__text--light">Young</span></a>
 
-      <article class="socials">
+      <nav class="socials">
         <a href="//github.com/louis-young"><img src="./assets/images/icons/socials/github.svg" alt="Github"
-            title="Github" class="socials__icon" loading="lazy" size="20x20"></a>
+            title="GitHub" class="socials__icon" loading="lazy"></a>
         <a href="//twitter.com/louisryoungg"><img src="./assets/images/icons/socials/twitter.svg" alt="Twitter"
-            title="Twitter" class="socials__icon" loading="lazy" size="20x20"></a>
+            title="Twitter" class="socials__icon" loading="lazy"></a>
         <a href="//linkedin.com/in/louis-r-young"><img src="./assets/images/icons/socials/linkedin.svg" alt="LinkedIn"
-            title="LinkedIn" class="socials__icon" loading="lazy" size="20x20"></a>
-      </article>
-    </section>
+            title="LinkedIn" class="socials__icon" loading="lazy"></a>
+      </nav>
+    </div>
   </footer>
 
-  <article class="switch">
+  <aside class="switch">
     <label for="light" class="switch__label switch__label--light switch__label--active">Light</label>
     <input type="radio" name="theme" class="switch__input" id="light" data-theme="light">
     <label for="dark" class="switch__label switch__label--dark">Dark</label>
     <input type="radio" name="theme" class="switch__input" id="dark" data-theme="dark">
-  </article>
+  </aside>
 
   <section class="fallback">
-    <article class="fallback__content container">
+    <div class="fallback__content container">
       <figure>
-        <a href="#top" class="logo"><span class="logo__text logo__text--dark">Louis</span> <span
+        <a href="#top" class="fallback__logo logo"><span class="logo__text logo__text--dark">Louis</span> <span
             class="logo__text logo__text--light">Young</span></a>
       </figure>
 
       <p class="fallback__text">You are currently using an outdated browser.</p>
       <p class="fallback__text">Please consider using a modern browser such as one listed below:</p>
 
-      <section class="browsers">
+      <div class="browsers">
         <a href="//www.google.com/chrome/" target="_blank" rel="noopener" class="browser">
           <img src="./assets/images/icons/browsers/chrome.svg" alt="Google Chrome">
           <p class="browser__title">Google Chrome</p>
@@ -369,8 +370,8 @@
           <img src="./assets/images/icons/browsers/firefox.svg" alt="Mozilla Firefox">
           <p class="browser__title">Mozilla Firefox</p>
         </a>
-      </section>
-    </article>
+      </div>
+    </div>
   </section>
 
   <!-- Scripts start. -->
