--- a/public/src/index.html
+++ b/public/src/index.html
@@ -164,36 +164,35 @@
     <section class="projects section container" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="500">
 
       <figure class="project">
-        <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
+        <a href="//staging.fluidstudiosltd.com" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Word Counter" title="Word Counter"
-            class="project__preview">
+          <img loading="lazy" src="./assets/images/projects/fluid-studios.jpg" alt="Full Stack Web Development Project"
+            title="Full-stack Web Development Project" class="project__preview">
+        </a>
+      </figure>
+
+      <figure class="project">
+        <a href="//promedica24.co.uk" class="project__link" target="_blank" rel="noopener nofollow noreferrer">
+          <img loading="lazy" src="./assets/images/projects/promedica.jpg" alt="Front End Web Development Project"
+            title="Front-end Web Development Project" class="project__preview">
         </a>
       </figure>
 
       <figure class="project">
         <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
           rel="noopener nofollow noreferrer">
-          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Web Development Project"
-            title="Web Development Project" class="project__preview">
+          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Word Counter React Web Application"
+            title="React.js Application" class="project__preview">
         </a>
       </figure>
 
       <figure class="project">
-        <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
-          rel="noopener nofollow noreferrer">
-          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Web Development Project"
-            title="Web Development Project" class="project__preview">
+        <a href="//www.esa-retail.co.uk" class="project__link" target="_blank" rel="noopener nofollow noreferrer">
+          <img loading="lazy" src="./assets/images/projects/esa-retail.jpg" alt="Bespoke Website Development Project"
+            title="Bespoke Web Development Project" class="project__preview">
         </a>
       </figure>
 
-      <figure class="project">
-        <a href="//app.louisyoung.co.uk/word-counter" class="project__link" target="_blank"
-          rel="noopener nofollow noreferrer">
-          <img loading="lazy" src="./assets/images/projects/word-counter.jpg" alt="Web Development Project"
-            title="Web Development Project" class="project__preview">
-        </a>
-      </figure>
     </section>
 
     <hr class="anchor" id="about">
