Update grammar and punctuation

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -10,14 +10,14 @@
   <link rel="author" href="humans.txt" />
   <!-- SEO start. -->
   <meta name="description"
-    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications websites and applications to help benefit businesses.">
+    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses.">
   <link rel="canonical" href="https://www.louisyoung.co.uk">
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Web Developer - Bespoke Website Development | Louis Young">
   <meta property="og:title" content="Louis Young - Web Developer">
   <meta property="og:url" content="https://www.louisyoung.co.uk">
   <meta property="og:description"
-    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications websites and applications to help benefit businesses.">
+    content="Experienced Web Developer creating fast, responsive, accessible and secure websites and applications to help benefit businesses.">
   <meta property="og:image"
     content="https://www.louisyoung.co.uk/assets/images/illustrations/full-stack-web-developer.svg">
   <meta name="twitter:site" content="https://www.louisyoung.co.uk">
@@ -143,7 +143,7 @@
           <article class="skill">
             <h3 class="skill__title">User Experience</h3>
             <p class="skill__text">Having worked on and built a plethora of websites, I know what works and what doesn't
-              for users, and therefore businesses and can spot issues in advance.</p>
+              for users, and therefore businesses, and can spot issues in advance.</p>
           </article>
 
           <article class="skill">
@@ -237,7 +237,7 @@
           <li class="pill">Webpack</li>
           <li class="pill">CMSs</li>
         </ul>
-        <p class="content__text"> and the ability to quickly learn others.</p>
+        <p class="content__text"> and I have the ability to quickly learn others.</p>
       </article>
     </section>
 
@@ -281,7 +281,7 @@
 
         <p class="content__text">and more.</p>
 
-        <p class="content__text">I am also practiced in using industry leading applications such as:</p>
+        <p class="content__text">I am also practised in using industry leading applications such as:</p>
         <ul class="pills">
           <li class="pill">Visual Studio Code</li>
           <li class="pill">Slack</li>
