--- a/public/src/index.html
+++ b/public/src/index.html
@@ -113,7 +113,7 @@
             <li class="navigation__item">
               <a href="#about" class="navigation__link header__link">About</a>
             </li>
-            <li class="navigation__item">
+            <!-- <li class="navigation__item">
               <a
                 href="/web-development-blog"
                 class="navigation__link navigation__link--icon header__link"
@@ -125,7 +125,7 @@
                   alt="Open"
                   class="navigation__icon"
               /></a>
-            </li>
+            </li> -->
           </ul>
           <a
             href="#contact"
@@ -354,6 +354,8 @@
             <li class="pill">React</li>
             <li class="pill">Next</li>
             <li class="pill">Node</li>
+            <li class="pill">Express</li>
+            <li class="pill">MongoDB</li>
             <li class="pill">PHP</li>
             <li class="pill">MySQL</li>
             <li class="pill">Apache</li>
@@ -404,33 +406,23 @@
             <li class="pill">Servers</li>
             <li class="pill">Hosting</li>
             <li class="pill">Domains</li>
+            <li class="pill">Databases</li>
             <li class="pill">DNS</li>
-            <li class="pill">APIs</li>
-            <li class="pill">CDNs</li>
             <li class="pill">Caching</li>
             <li class="pill">Deployment</li>
+            <li class="pill">CI / CD</li>
+            <li class="pill">APIs</li>
+            <li class="pill">CDNs</li>
+            <li class="pill">Optimisation</li>
             <li class="pill">SSLs</li>
             <li class="pill">VPSs</li>
             <li class="pill">Dedicated Servers</li>
-            <li class="pill">UI</li>
-            <li class="pill">UX</li>
+            <li class="pill">UI / UX</li>
             <li class="pill">Technical SEO</li>
-            <li class="pill">Google Analytics</li>
+            <li class="pill">Analytics</li>
             <li class="pill">Documentation</li>
           </ul>
 
-          <p class="content__text">and more.</p>
-
-          <p class="content__text">
-            I am also practised in using industry leading applications such as:
-          </p>
-          <ul class="pills">
-            <li class="pill">Visual Studio Code</li>
-            <li class="pill">Slack</li>
-            <li class="pill">Asana</li>
-            <li class="pill">Postman</li>
-            <li class="pill">Adobe XD</li>
-          </ul>
           <p class="content__text">and more.</p>
         </article>
       </section>
@@ -455,13 +447,13 @@
 
           <p class="contact__text">
             I'm always open to great new opportunities, so if you would like to
-            find about more about me in a professional capacity please get in
+            find about more about me in a professional capacity, please get in
             touch via any of the methods on my website.
           </p>
 
           <p class="contact__text">
             Alternatively, send me an email at
-            <a href="mailto:me@louisyoung.co.uk" class="link"
+            <a href="mailto:me@louisyoung.co.uk?subject=Website" class="link"
               >me@louisyoung.co.uk</a
             >.
           </p>
@@ -501,7 +493,10 @@
         >
 
         <nav class="socials">
-          <a href="//github.com/louis-young"
+          <a
+            href="//github.com/louis-young"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
             ><img
               src="./assets/images/icons/socials/github.svg"
               alt="Github"
@@ -509,15 +504,10 @@
               class="socials__icon"
               loading="lazy"
           /></a>
-          <a href="//twitter.com/louisryoungg"
-            ><img
-              src="./assets/images/icons/socials/twitter.svg"
-              alt="Twitter"
-              title="Twitter"
-              class="socials__icon"
-              loading="lazy"
-          /></a>
-          <a href="//linkedin.com/in/louis-r-young"
+          <a
+            href="//linkedin.com/in/louis-r-young"
+            target="_blank"
+            rel="noopener nofollow noreferrer"
             ><img
               src="./assets/images/icons/socials/linkedin.svg"
               alt="LinkedIn"
